# Proyecto_final

./: .dockerignore  .gitignore  README.md  app.py  check_gpu.py  final_consolidado.py  healthcheck.py  prueba_vision_contador.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
config/: app.yaml  data.yaml  lanes.example.json  tracker.yaml
data/datasets/yolo/train/: labels.cache
data/datasets/yolo/val/: labels.cache
docker/: Dockerfile
models/yolo12/modelo_final/: args.yaml  results.csv
proto/: traffic.proto
scripts/: train_ajustado.py
src/control/: cont_heuristico.py
src/utils/: dib.py  geometry.py  io.py
src/vision/: counter.py  detector.py
src_grpc/: client_example.py  server.py  traffic_pb2.py  traffic_pb2_grpc.py
tests/: conftest.py  test_control.py  test_counter.py  test_geometry.py  test_heuristic.py  test_pipeline_smoke.py
tools/: run_with_mlflow.py
