[project]
name = "proyectofinal"
version = "0.1.0"
description = "Proyecto final - Sistema de visión por computadora con YOLO y seguimiento de objetos"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "David", email = "david@example.com"},
]
keywords = ["computer-vision", "yolo", "object-tracking", "fastapi", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.111",
    "grpcio>=1.65",
    "grpcio-tools>=1.65",
    "lapx>=0.5",
    "mlflow>=2.15",
    "numpy>=2,<3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pyyaml>=6.0.2",
    "scipy>=1.12",
    "streamlit>=1.34",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.203",
    "uvicorn>=0.30",
]

[project.scripts]
main = "main:main"
app = "app:main"
healthcheck = "healthcheck:main"

[project.urls]
Homepage = "https://github.com/username/proyectofinal"
Repository = "https://github.com/username/proyectofinal.git"
Issues = "https://github.com/username/proyectofinal/issues"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]
